# deskover

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  overlay_config.json  vcpkg.json
OverlayApp/: CMakeLists.txt  main.cpp
OverlayApp/media/: gif_player.cpp  gif_player.h  texture_loader.cpp  texture_loader.h
